<resources>
    <string name="none">None</string>
    <string name="app_name">PolyEvents</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_item_request_management">Item Request Management</string>
    <string name="title_activity_zone_management">Zone Management</string>
    <string name="title_activity_user_management">User Management</string>
    <string name="title_activity_user_list_management">User Management List</string>
    <string name="title_activity_event_management">Event Management</string>
    <string name="title_activity_items_admin">Items Management</string>
    <string name="title_activity_events">Events</string>
    <string name="nav_menu_home">Home</string>
    <string name="nav_menu_map">Map</string>
    <string name="nav_menu_events">Events</string>
    <string name="nav_menu_profile">Profile</string>
    <string name="nav_menu_settings">Settings</string>
    <string name="login_failed_text">Failed to log into your account</string>
    <string name="login_button_text">Sign in with Google</string>
    <string name="send_request_button_text">Send request</string>
    <string name="item_request_sent_text">Your request has been sent !</string>
    <string name="item_request_empty_text">Your request is empty. Please select some items !</string>
    <string name="item_quantity_positive_text">The quantity must be positive !</string>
    <string name="item_name_quantity_text">%1$s\n(%2$d available)</string>
    <string name="max_item_quantity_text">There are only %1$s %2$s available !</string>
    <string name="admin_hub_btn_item_list_text">Item List</string>
    <string name="admin_hub_btn_item_request_text">Item Req</string>
    <string name="admin_hub_btn_route_text">Route</string>
    <string name="admin_hub_btn_zone_text">Zone</string>
    <string name="admin_hub_btn_event_text">Event</string>
    <string name="admin_hub_btn_user_text">User</string>
    <string name="admin_hub_title">Admin management options</string>
    <string name="event_edit_btn_text">Event edit</string>
    <string name="provider_hub_title">Provider management options</string>
    <string name="items_requests_button_text">Requests</string>
    <string name="my_items_requests_button_text">My requests</string>
    <string name="staff_hub_title">Staff management options</string>
    <string name="logout_button_text">Logout</string>
    <string name="update_infos">Update info</string>
    <string name="birthdayPlaceholder">Birthday</string>
    <string name="UsernamePlaceholder">Username</string>
    <string name="FullNamePlaceholder">Full name</string>
    <string name="emailPlaceholder">Email</string>
    <string name="fail_to_update">A problem occurred while performing your request, please try again</string>
    <string name="profileFragmentTitle">My information</string>
    <string name="title_activity_item_request">Items Request</string>
    <string name="ProfileList">Profile List</string>
    <string name="profile_name_edit_Text">profile name</string>
    <string name="fail_to_remove_profiles">Fail to remove profiles</string>
    <string name="fail_to_add_profiles">Fail to add profiles</string>
    <string name="EditProfileActivity_Name">Name</string>
    <string name="EditProfileActivity_ID">ID</string>
    <string name="EditProfileActivity_Rank">Rank</string>
    <string name="EditProfileActivity_Save">Save</string>
    <string name="EditProfileActivity_Cancel">Cancel</string>
    <string name="EditProfileActivity_DatabaseError">Impossible to update your profile information, please try again.</string>
    <string-array name="Ranks">
        <item>Admin</item>
        <item>Activity provider</item>
        <item>Staff</item>
        <item>Visitor</item>
    </string-array>
    <string name="btn_create_zone_button_text">Create zone</string>
    <string name="btn_update_zone_button_text">Update zone</string>
    <string name="zone_mangement_list_title">All zones</string>
    <string name="btn_new_zone">+</string>
    <string name="tv_create_zone_text">Create a new zone</string>
    <string name="tv_update_zone_text">Update an existing zone</string>
    <string name="missing_field_zone_management">Please fill all the required fields</string>
    <string name="zone_added_successfully">Your new zone was successfully added</string>
    <string name="zone_updated_successfully">The zone was successfully updated</string>
    <string name="zone_add_fail">Error while creating your new zone, please try again !</string>
    <string name="zone_update_fail">Error while update your zone, please try again !</string>
    <string name="zone_management_name_text">Name</string>
    <string name="zone_management_description_text">Description</string>
    <string name="zone_management_coordinates_text">Zone coordinates</string>
    <string name="zone_management_coordinates_set">Set</string>
    <string name="zone_management_coordinates_not_set">Not set</string>
    <string name="btn_modify_coord_update_text">Update</string>
    <string name="btn_modify_coord_set_text">Set</string>
    <string name="btn_delete_coord_text">Delete</string>
    <string name="failed_to_get_item">Failed to get items</string>
    <string name="go_to_admin_item_list">go to admin item list</string>
    <string name="failed_to_get_list_users">Failed to get users information</string>
    <string name="failed_to_get_event_list">Failed to get events information</string>
    <string name="upcoming_activities_txt">Upcoming activities</string>
    <string name="at_hour_text">at %1$s</string>
    <string name="label_activity_description">Description</string>
    <string name="label_tags">Tags</string>
    <string name="label_comments">Comments</string>
    <string name="event_attendees">%d/%d </string>
    <string name="event_schedule">at %s</string>
    <string name="event_info_fail">Failed to get the event information</string>
    <string name="my_events">My Events</string>
    <string name="my_events_log_in">Log in to show your upcoming events</string>
    <string name="event_unsubscribe">Unsubscribe</string>
    <string name="event_subscribe">Subscribe</string>
    <string name="event_follow">Follow</string>
    <string name="event_unfollow">Unfollow</string>
    <string name="event_successfully_followed">You are now following this event!</string>
    <string name="event_successfully_unfollowed">You are no longer following this event</string>
    <string name="event_successfully_subscribed">Successfully registered to event!</string>
    <string name="event_subscription_fail">Could not subscribe to event, please try again later</string>
    <string name="event_successfully_unsubscribed">Successfully unsubscribed from event!</string>
    <string name="event_unsubscribe_fail">Failed to unsubscribe from event, please try again later</string>
    <string name="toast_subscribe_warning">"You have to be logged in to subscribe"</string>
    <string name="event_already_subscribed">You are already registered to this event</string>
    <string name="event_subscribe_at_max_capacity">
        Event has reached the maximum number of participants</string>
    <string name="event_profile_picture">Event Profile Picture</string>
    <string name="leave_a_review">Leave a review!</string>
    <string name="ok">OK</string>
    <string name="your_review">Your review!</string>
    <string name="leave_a_review_hint">Leave a review…</string>
    <string name="event_review_warning">"You need to login to leave a review"</string>
    <string name="event_review_leave_rating_warning">Please leave a rating before leaving</string>
    <string name="event_review_saved">Review saved!</string>
    <string name="event_review_failed">Could not save review</string>
    <string name="query_not_satisfied">Query not satisfied</string>
    <string name="event_list_management">All events</string>
    <string name="btn_new_event_text">+</string>
    <string name="message_confirm_delete">Are you sure to want to delete %1$s (this action is not reversible)</string>
    <string name="failed_get_event_information">Unable to get the information associated to this event</string>
    <string name="failed_to_update_event_info">Unable to update the event, please try again</string>
    <string name="event_update_success">Event successfully updated</string>
    <string name="event_creation_success">Event successfully created</string>
    <string name="event_creation_failed">Unable to create the event, please try again</string>
    <string name="failed_get_zones">Impossible to get zones from database</string>
    <string name="empty_name_field">Name field should not be empty</string>
    <string name="description_not_empty">Description field should not be empty</string>
    <string name="end_date_before_start_date">The end date is before the start date</string>
    <string name="end_date_field">End date</string>
    <string name="end_date_selection">Select an end date</string>
    <string name="pick_date_btn">Pick date</string>
    <string name="pick_time_btn_text">Pick time</string>
    <string name="description_hint">Description</string>
    <string name="start_date_text">Start date</string>
    <string name="start_date_hint">Select a start date</string>
    <string name="switch_limited_event_text">Limited event</string>
    <string name="number_participants_hint">Number participants</string>
    <string name="name_field_hint">Name</string>
    <string name="choose_a_zone_hint">Choose a zone</string>
    <string name="update_event_btn_text">Update event</string>
    <string name="create_event_btn_text">Create event</string>
    <string name="title_activity_event_list_management">Event List</string>
    <string name="fail_delete_from_database">Fail to delete the event from the database, please try again</string>
    <string name="success_delete_from_database">The event was successfully delete from the database</string>
    <string name="event_deletion_no_button_text">No</string>
    <string name="event_deletion_yes_button_text">Yes</string>
    <string name="fail_retrieve_events">Failed to retrieve all the events</string>
    <string name="number_of_event_greater_than_0">The number of participant must be >= %1$d</string>
    <string name="choose_an_organiser">Choose an organiser</string>
    <string name="event_edit_request_successfully_sent">Your event edit request has been successfully sent</string>
    <string name="event_edit_request_error">Error while sending event edit request, please try again</string>
    <string name="edit_fragment_creation_title">Creation</string>
    <string name="edit_title_modification">Modified</string>
    <string name="edit_original_title">Original</string>
    <string name="edit_name_label">Name:</string>
    <string name="edit_start_date_label">Start date:</string>
    <string name="edit_end_date_label">End date:</string>
    <string name="edit_zone_label">Zone:</string>
    <string name="edit_limited_event_label">Limited event ?</string>
    <string name="edit_desc_label">Description</string>
    <string name="edit_close_btn_text">Close</string>
    <string name="fragment_edit_no_text">No.</string>
    <string name="fragment_edit_limited_text">Yes, %1$s.</string>
    <string name="my_item_requests">My item requests</string>
    <string name="see_events">See events</string>
    <string name="show_itinerary">Show itinerary</string>
    <string name="zone_name">Zone name</string>
    <string name="zone_description">Zone description</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="settings">Settings</string>
    <string name="track_location">Track Location</string>
    <string name="send_location">Send Location</string>
    <string name="track_location_description">Track your location on the map</string>
    <string name="send_location_description">Collect your location data to send to the heatmap</string>
</resources>