<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/preview_zone_events_bottom_sheet_dialog">

    <Button
        android:id="@+id/zone_preview_show_itinerary_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_itinerary"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/zone_preview_show_events_button"
        app:layout_constraintTop_toTopOf="parent"
        android:enabled="false"/>

    <Button
        android:id="@+id/zone_preview_show_events_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_events"
        android:layout_margin="16dp"
        app:layout_constraintStart_toEndOf="@id/zone_preview_show_itinerary_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:enabled="false"/>

    <TextView
        android:id="@+id/zone_preview_dialog_zone_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/zone_preview_show_itinerary_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:textSize="32sp"
        android:textStyle="bold"
        android:text="@string/zone_name" />

    <TextView
        android:id="@+id/zone_preview_dialog_zone_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zone_description"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/zone_preview_dialog_zone_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/zone_preview_dialog_upcoming_events"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/zone_preview_dialog_zone_description"
        android:layout_margin="16dp"
        android:textSize="32sp"
        android:text="@string/upcoming_events"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/zone_preview_dialog_event_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/zone_preview_dialog_upcoming_events"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>